sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:8: error: '(' expected but identifier found.
      if PlusPetit(i,min) {min=i}
         ^AlgSelectionSort:9: error: illegal start of simple expression
    }
    ^